add post to movies
